proto file fix
